--- a/cluster/apps/default/plex/secret.enc.yaml
+++ b/cluster/apps/default/plex/secret.enc.yaml
@@ -4,33 +4,33 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:qyZ32ucFSdKMv4mRQ8aMZAF08gXAuzhwNlE=,iv:syzlbwdUxlsgvn6rsD0lSHmYJWXgcyGZSV2UdBfVIbo=,tag:MtdLF7XF2hB30O3Sx48A1g==,type:str]
+    PLEX_CLAIM: ENC[AES256_GCM,data:BTh0brG8ETKwwGS2wSNDy7YalDUMOgRGqsY=,iv:N2Dfx68cz+MBg++jFlFS9Jl6J3UbJZBpoc+1/frtcyI=,tag:lLUYaymkDKyImlyULkEC+w==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-01-23T19:13:47Z"
-    mac: ENC[AES256_GCM,data:bsJoFdmyAVxv7DGyZcwHlsNLWuYwwZon3zjhezgNpiggwGs13WdDa20RxDB/nfzvzXktJM+8XzXendQniA3S3CJ3R2SMti8R17EKsTaSflnnQAnNIUMrDy1m8SioWJeTGjrGzEYpRrITasWS2vRCRajDmKt3ZB6MHqlv17bLNpk=,iv:TxbotcVzyz+NYWfN7uJLbsOWB5dUKPth8f/BIBuEBwM=,tag:UEmv4r5+ENrmy7fFonfeDg==,type:str]
+    lastmodified: "2022-07-22T21:24:04Z"
+    mac: ENC[AES256_GCM,data:0ApxfzOxluHS3edDTnXAwft1t7dIokHqzTDoYRTHUBv4nzrqNTkznaO8sxzBGrHiUURbVkMZzp2uIjIwvCHYQ33gJwm6Tmvzs2Sxb3MLWOYctVk6zeIVNxO+pFjj4gra2XYp4PpjVLuxal03Sy6De1wBXWHgSF3LQhGUGElVQfQ=,iv:AuZngJdVYNqekaze95Gq7Hyo70H9C0txPuBVw2h5P1Y=,tag:SzAX2dQ9STXukMs+ufA67w==,type:str]
     pgp:
-        - created_at: "2022-01-23T19:13:46Z"
+        - created_at: "2022-07-22T21:24:04Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv+MrWLqPRzd0f8PD+Qboq3LTOg3eGnBFfvs3/shssn0IvB
-            duMgpOdgBMUCrABftBHanrBNO6EFYTXbTNK0l0U8M6ESiXXC4Q18VSIzp/tb6xkd
-            4KbAbaYn3fz3L6r1XKmLpVwaYrTygHP1peyd0U1Ldzawy4nM29TVAnTZf1edYdQP
-            N5gPfU01V7aBp55gMryXN3HgneFaR+KHetg7sMrITDkyUMW0/56jzCjPAnnTV79H
-            fc5bPkrGjIuIFqIMpVZXkkptsVBJssCM3utQMzzmBUvJfxWrXstPdXic/gYzxUnd
-            JvAj3lBbHGZ6e9GoHccBFGas5/vn+nXbYx3Pqt6Nl/a6K3iateOc0yXtTdNvECgJ
-            uYb3LLPU7acZ7hapOOgVGefbKP8keBhEkhCAbthE71ywX5Blr044SilAaUkVPGpg
-            9RgC2Za44rMLyuAYvlKxxlzCSSI0+zEL9Yoo9gx9BNqGsBWEpvLkYXBvRzg2X1A3
-            NK5U0VrDjCNJXgWTvl390l4BWIPXrKaEMMoF/exlL23gK1YFLn2KbYbRl8Gpz8cH
-            SdWHxhDK7ydlsFMKjB8GjA8uJGdzF5+4q4aCCgMvEl8eh3LzesdLg68QYmTVk/Gg
-            ezuNHaHBK1c0ziff1bon
-            =/IrO
+            hQGMA71EESEn7N2iAQv/U2rV/dvDZjXruaZZxlwtpGHesrrJQxOGLWPfCaLh7uDb
+            gTJOPuWYBgnFz4Zd6SJuO3+srrqT/vG1TKATKhpuSvHBwskK4P8EmkE5RS+rhY11
+            Yt50fR/nBUCeTzPh8JANDo0U3nLK/e6G559VLHPpv2aQcgkEgasHsQS2HYeUEZVs
+            JGTBBf0979C3PL333qpqivxth0vD38dI4LhZ7UoEzMRSYBI+qAFdt+k01zX5gBg+
+            5NubKzj2hFd2aZvnqbUsdkTLIm4k1uVzbmvDc/1xSc5dI5AnlBYdJ6qwEHYS8/Oa
+            EFE0LcupXiUKJKJWRMkAVe9XAxhYsjqjveJdunZSM7vPYGQVp2ByqarynXttnHN2
+            w/QJqYxgGujC/U4nk2Bt24V1pMHF0HfpCevemQMXTExZbJH5mKhb/VsljCqBKA5n
+            oBHWPWca76zczn2JD9VBVGGDsaxYlDWugUDE06+/WFbBzNFYAoYKeAtwTCr4AsMF
+            VBfaifsBmQWc79pjAbYe0lwB6vCxj49sfxZ0doOEwCdXsx+5zgMlSwFyFJ/6Hf4i
+            RIGCChgv6FHepj8J/VYPEQg7V+r1cxafQ8S9VAj9VlVjMMXVx2exJmQCfSk6a9CH
+            s4qZbrc+RASh+m+vTw==
+            =Ayub
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
+    version: 3.7.3
