chore(plex): change plex claim

--- a/cluster/apps/default/plex/secret.enc.yaml
+++ b/cluster/apps/default/plex/secret.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:BTh0brG8ETKwwGS2wSNDy7YalDUMOgRGqsY=,iv:N2Dfx68cz+MBg++jFlFS9Jl6J3UbJZBpoc+1/frtcyI=,tag:lLUYaymkDKyImlyULkEC+w==,type:str]
+    PLEX_CLAIM: ENC[AES256_GCM,data:GUlfyp3tW8kRr4e+5eaTgsjjvpd0bxOyjSk=,iv:emuWrIamw7sApUUwL711YbzA+0QeUjLZYvkzB/K6Ioc=,tag:TBbgMncrnelvGrrlxB9nhg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-07-22T21:24:04Z"
-    mac: ENC[AES256_GCM,data:0ApxfzOxluHS3edDTnXAwft1t7dIokHqzTDoYRTHUBv4nzrqNTkznaO8sxzBGrHiUURbVkMZzp2uIjIwvCHYQ33gJwm6Tmvzs2Sxb3MLWOYctVk6zeIVNxO+pFjj4gra2XYp4PpjVLuxal03Sy6De1wBXWHgSF3LQhGUGElVQfQ=,iv:AuZngJdVYNqekaze95Gq7Hyo70H9C0txPuBVw2h5P1Y=,tag:SzAX2dQ9STXukMs+ufA67w==,type:str]
+    lastmodified: "2022-08-26T12:01:52Z"
+    mac: ENC[AES256_GCM,data:BS6CMGscKiVMNOTyNVgO4GOLBGVary3+wDWWkmUPKPkdHJ0CKppfL/0vfHSEW72zIeIShOcyWjL/VUwUj3+fUf8Je9C6N+jh6Jg1YtXh/cfLUA7EYQTxZbVe83FX6YfDj0q268lkOWg7n42ONNr9pLsvKl+En7MpdgsK/rh5GrM=,iv:xzCEK+ZFLpF/Huy0tZPmN97d+w0ZJp7amkqpfP9QOA0=,tag:l5WyLUYiR9wGz6zES2vz9Q==,type:str]
     pgp:
-        - created_at: "2022-07-22T21:24:04Z"
+        - created_at: "2022-08-26T12:01:51Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/U2rV/dvDZjXruaZZxlwtpGHesrrJQxOGLWPfCaLh7uDb
-            gTJOPuWYBgnFz4Zd6SJuO3+srrqT/vG1TKATKhpuSvHBwskK4P8EmkE5RS+rhY11
-            Yt50fR/nBUCeTzPh8JANDo0U3nLK/e6G559VLHPpv2aQcgkEgasHsQS2HYeUEZVs
-            JGTBBf0979C3PL333qpqivxth0vD38dI4LhZ7UoEzMRSYBI+qAFdt+k01zX5gBg+
-            5NubKzj2hFd2aZvnqbUsdkTLIm4k1uVzbmvDc/1xSc5dI5AnlBYdJ6qwEHYS8/Oa
-            EFE0LcupXiUKJKJWRMkAVe9XAxhYsjqjveJdunZSM7vPYGQVp2ByqarynXttnHN2
-            w/QJqYxgGujC/U4nk2Bt24V1pMHF0HfpCevemQMXTExZbJH5mKhb/VsljCqBKA5n
-            oBHWPWca76zczn2JD9VBVGGDsaxYlDWugUDE06+/WFbBzNFYAoYKeAtwTCr4AsMF
-            VBfaifsBmQWc79pjAbYe0lwB6vCxj49sfxZ0doOEwCdXsx+5zgMlSwFyFJ/6Hf4i
-            RIGCChgv6FHepj8J/VYPEQg7V+r1cxafQ8S9VAj9VlVjMMXVx2exJmQCfSk6a9CH
-            s4qZbrc+RASh+m+vTw==
-            =Ayub
+            hQGMA71EESEn7N2iAQv/RULByjzLbq2Dhv4KfAtqfL8j3e3LeXDNPhThMgyG0wlf
+            BPgtk4NIhUG2vctUMgyYeiBZ9mKqpqUlgTFpwzR/wqQB3OsNYRyesmld7ktWP9L3
+            DT2KAf5g5V+nScZskvG0vF0IqsLAjNJwo/1AP8wQ4bSle8iY/4QFGccbbaKAMP2x
+            jp+52kDsKiiSg5vNrzJfK7odNasG6Q0yst9AdP/6hZFQSSg/I5z9KIthncSVzEa4
+            IaWtQMWQ8ZqPbDAn0Qo2Kjp+mV9Cfl6z5kpzOoiQa7kp6YrEkaTGkzwfW7JY1OWi
+            TO1xYk14JCCwWsHZgW3rrKIUjaEWetOwWgS4o8K3cIvjIqISyP36w19pIeFXbzsL
+            tLJGIJ+qXIX2lTCBsgJ4yOvsoG6T8+zWtispEZGEVm2ZeNxhrK1g2LdvNeTjJoQh
+            djCxp3+i52m+mXymyd8y8YXcZANbhkJI5cxmc0lLSNDkvaQ5qGT3JNEx8TcM2Po8
+            Fax8eB8uaDFIdiTfI7I50l4Bqk9Z/cByvdqDXQ7TsBHT6zmKO8v5okUwMMNW0Srl
+            QQkrfap7jImb78o/Apfr8G/9Dcp9Ub+AGCSxTKQQxUvhZMXuQp/0EFpFvbc0hNXk
+            AmDCYsDyu7udFWRBAK4Y
+            =gYml
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
