chore(loki): add missing values for versoin 3.x.x of loki helm chart

--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -24,6 +24,10 @@ spec:
       enabled: true
       existingClaim: loki-pvc
 
+    # Needed for version 3 of the helm chart, see https://github.com/grafana/loki/tree/main/production/helm/loki#upgrading-from-grafanaloki
+    commonConfig:
+      replication_factor: 1
+
     # https://grafana.com/docs/loki/latest/storage/
     config:
       auth_enabled: false
