--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -79,6 +79,12 @@ spec:
         enabled: false
       selfMonitoring:
         enabled: false
+        # Grafana Agent configuration
+        grafanaAgent:
+          # -- Controls whether to install the Grafana Agent Operator and its CRDs.
+          # Note that helm will not install CRDs if this flag is enabled during an upgrade.
+          # In that case install the CRDs manually from https://github.com/grafana/agent/tree/main/production/operator/crds
+          installOperator: false
 
     livenessProbe:
       initialDelaySeconds: 60
