chore(loki): enable filesystem storage for loki chart

--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -27,6 +27,8 @@ spec:
     # Needed for version 3 of the helm chart, see https://github.com/grafana/loki/tree/main/production/helm/loki#upgrading-from-grafanaloki
     commonConfig:
       replication_factor: 1
+    storage:
+      type: "filesystem"
 
     # https://grafana.com/docs/loki/latest/storage/
     config:
