--- a/cluster/crds/loki/kustomization.yaml
+++ b/cluster/crds/loki/kustomization.yaml
@@ -1,8 +1,8 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-namespace: monitoring
-resources:
+#apiVersion: kustomize.config.k8s.io/v1beta1
+#kind: Kustomization
+#namespace: monitoring
+#resources:
   # Wanted to remove this but couldn't, kept giving the following error:
   # Helm upgrade failed: resource mapping not found for name: "loki-read" namespace: "" from "": no matches for kind "ServiceMonitor" in version "monitoring.coreos.com/v1"
   # renovate: registryUrl=https://grafana.github.io/helm-charts chart=loki
-  - https://raw.githubusercontent.com/grafana/loki/loki-3.0.0/production/helm/loki/crds/crd-servicemonitors.yaml
+#  - https://raw.githubusercontent.com/grafana/loki/main/production/helm/loki/crds/crd-servicemonitors.yaml
