--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -68,22 +68,22 @@ spec:
         enabled: true
         mountPath: /usr/src/paperless/data
         existingClaim: "nfs-media-downloads-pvc"
-        path: "/Docs/paperless/data"
+        path: "Docs/paperless/data"
       media:
         enabled: true
         mountPath: /usr/src/paperless/media
         existingClaim: "nfs-media-downloads-pvc"
-        path: "/Docs/paperless/media"
+        path: "Docs/paperless/media"
       consume:
         enabled: true
         mountPath: /usr/src/paperless/consume
         existingClaim: "nfs-media-downloads-pvc"
-        path: "/Docs/paperless/incoming"
+        path: "Docs/paperless/incoming"
       export:
         enabled: true
         mountPath: /usr/src/paperless/export
         existingClaim: "nfs-media-downloads-pvc"
-        path: "/Docs/paperless/export"
+        path: "Docs/paperless/export"
 
     resources:
       requests:
