wip(paperless): yet another attempt at fixing nfs mounting issues

--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -67,22 +67,26 @@ spec:
       data:
         enabled: true
         mountPath: /usr/src/paperless/data
-        existingClaim: "nfs-media-downloads-pvc"
+        type: nfs
+        server: 192.168.1.200
         path: "/srv/nfs/Docs/paperless/data"
       media:
         enabled: true
         mountPath: /usr/src/paperless/media
-        existingClaim: "nfs-media-downloads-pvc"
+        type: nfs
+        server: 192.168.1.200
         path: "/srv/nfs/Docs/paperless/media"
       consume:
         enabled: true
         mountPath: /usr/src/paperless/consume
-        existingClaim: "nfs-media-downloads-pvc"
+        type: nfs
+        server: 192.168.1.200
         path: "/srv/nfs/Docs/paperless/incoming"
       export:
         enabled: true
         mountPath: /usr/src/paperless/export
-        existingClaim: "nfs-media-downloads-pvc"
+        type: nfs
+        server: 192.168.1.200
         path: "/srv/nfs/Docs/paperless/export"
 
     resources:
