--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -64,30 +64,12 @@ spec:
               - "paperless.${SECRET_DOMAIN}"
 
     persistence:
-      data:
+      paperless:
         enabled: true
-        mountPath: /usr/src/paperless/data
+        mountPath: /usr/src/paperless
         type: nfs
         server: 192.168.1.200
-        path: "/srv/nfs/Docs/paperless/data"
-      media:
-        enabled: true
-        mountPath: /usr/src/paperless/media
-        type: nfs
-        server: 192.168.1.200
-        path: "/srv/nfs/Docs/paperless/media"
-      consume:
-        enabled: true
-        mountPath: /usr/src/paperless/consume
-        type: nfs
-        server: 192.168.1.200
-        path: "/srv/nfs/Docs/paperless/incoming"
-      export:
-        enabled: true
-        mountPath: /usr/src/paperless/export
-        type: nfs
-        server: 192.168.1.200
-        path: "/srv/nfs/Docs/paperless/export"
+        path: "/srv/nfs/Docs/paperless"
 
     resources:
       requests:
