wip(paperless): fix wrong ocr languages in paperless

--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -27,8 +27,8 @@ spec:
       PAPERLESS_CONSUMER_RECURSIVE: "true"
       PAPERLESS_CONSUMER_SUBDIRS_AS_TAGS: "true"
       PAPERLESS_ENABLE_HTTP_REMOTE_USER: "false"
-      PAPERLESS_OCR_LANGUAGES: ara
-      PAPERLESS_OCR_LANGUAGE: en+ara
+      PAPERLESS_OCR_LANGUAGE: eng+ara
+      PAPERLESS_OCR_LANGUAGES: eng ara
       PAPERLESS_PORT: 8000
       PAPERLESS_REDIS: redis://paperless-redis.default.svc.cluster.local:6379
       PAPERLESS_TASK_WORKERS: 1
