fix(paperless): fix wrong PAPERLESS_URL env var

--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -33,7 +33,7 @@ spec:
       PAPERLESS_REDIS: redis://paperless-redis.default.svc.cluster.local:6379
       PAPERLESS_TASK_WORKERS: 1
       PAPERLESS_TIME_ZONE: "Africa/Cairo"
-      PAPERLESS_URL: https://paperless.${INGRESS_DOMAIN}
+      PAPERLESS_URL: "https://paperless.${SECRET_DOMAIN}"
       USERMAP_UID: 1002
       USERMAP_GID: 1002
 
