fix(paperless): some updates to env vars

--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -23,7 +23,7 @@ spec:
 
     env:
       COMPOSE_PROJECT_NAME: paperless
-#      PAPERLESS_CONSUMER_POLLING: "60"
+      PAPERLESS_CONSUMER_POLLING: "60"
       PAPERLESS_CONSUMER_RECURSIVE: "true"
       PAPERLESS_CONSUMER_SUBDIRS_AS_TAGS: "true"
       PAPERLESS_ENABLE_HTTP_REMOTE_USER: "false"
