--- a/cluster/apps/default/paperless/secrets.enc.yaml
+++ b/cluster/apps/default/paperless/secrets.enc.yaml
@@ -4,34 +4,35 @@ metadata:
     name: paperless-secrets
     namespace: default
 stringData:
-    PAPERLESS_ADMIN_USER: ENC[AES256_GCM,data:Jy+rPXIY,iv:9AIFPrnjdj8K44zyY2qVdQYABYJCMTFUnsVJypg5j/Y=,tag:U2FH7UprtXYt2FlnLvU6eQ==,type:str]
-    PAPERLESS_ADMIN_PASSWORD: ENC[AES256_GCM,data:9tlynFl9g0q/+gzrh+G30/VrZS7/tZ4ECcZbIai3K/sovOSQq9ZyyQ==,iv:6gd/vV5WFF98WDSqaiLiN45NWSqhXtlLLnl6JGYGyaI=,tag:sStYJNidUea1A9aq7c1onQ==,type:str]
-    PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:5TMvajo12OPjw4oemveJY8LQmAo7BgnfWFCUHR8ZISwLDza/uj7DBg==,iv:gwC4yvG5RkJkO6yBk4T6L12cHURVHfVaHza2NFalRLY=,tag:AO1n34Hy20P7CDj486m+ew==,type:str]
+    PAPERLESS_ADMIN_USER: ENC[AES256_GCM,data:CsMMqeU+,iv:FP9WNUkOnrTRtRG/EQPv3jj1j1arkDwkR13FPo9ywE0=,tag:PPnfyzzAfuyIHn8YZMFWcA==,type:str]
+    PAPERLESS_ADMIN_PASSWORD: ENC[AES256_GCM,data:pIYdYiQpENKqgvsmgGbdzNimwPkXCrkykAr3Yg+HvkxzU4ahTyPtKA==,iv:YsWnAzPb5eE2fxMj+mKl4tU2HPcoH84FP6+oLG+bdZk=,tag:F8Iq8stpkmKmVjdo6i3vKA==,type:str]
+    PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:gzg38CIo2xyx1aT7xq1nqWDHY2QLg0rKRQ2cEvkUlTfcKPk3Ry6cIA==,iv:qh68jl6Vj8jx/JW7y1eGqd6WFiT8HbEvP5PmkXE18zQ=,tag:JwwDP0CMn1G11YGLAKp/aA==,type:str]
+    PAPERLESS_AUTO_LOGIN_USERNAME: ENC[AES256_GCM,data:KTykXNPs,iv:+Wu1DKE1YGnSK2DQden1VDLbRTB1lAQfa+q3U+buYXY=,tag:DnGJTVWScEg3f60LK7QmIQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-09-28T18:39:03Z"
-    mac: ENC[AES256_GCM,data:Q606e5PEPRuddSQ7gwXjQaDwVpkTiJpl0m4cDaWcYRAiMi6uvvcM5Cb/SIPoxVcHadqFQ2YIjqhZlr5Wu2m4EtRQQYk5Av9gPDNIlcwbLrLB3s8wgjVVLHSknKhBRAj7YrtN4/8Dx3sVZwN8gR2xxrwh0PXyhYo434E9P8b2A1A=,iv:YxxuqCF0YX6c4NAdRJZVS+NLuBWldhNtmCkcLaoB/Bk=,tag:x2xgDXEw6eVkSA/X17x59g==,type:str]
+    lastmodified: "2022-09-28T19:27:33Z"
+    mac: ENC[AES256_GCM,data:lbiHgh2c2PMVbhfNpazJaTXqbzUo1iPRofrnoM7JYeWBZLpgVDqLJ/vyX/os9B87Ah9ZkEiZcQ7tUQKXcUZIQ7oPSQgimHrYAjobguYbsMnpuI8TttS58HJ7CGlL91f2obKDgpbUD86SyDMJFCbfuXblAHlo5VMCiHui9KLLtVg=,iv:s2f8jxn4/BApnw/zTBN6ElVOdAWr5nZeA6RiZ2MqhOU=,tag:aJvMX4JjtRjpKDshrxmHnw==,type:str]
     pgp:
-        - created_at: "2022-09-28T18:39:02Z"
+        - created_at: "2022-09-28T19:27:32Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv8D8Q6Ni9+/bpEWMYg2ZaQJidGR7UFsq0zw7njtkWwItvr
-            1H2cOrY65pLwf6GNpfoWvEvEhMSCvS+BDCgphsyn75t+YBtBVxOHTBUQFofRP8QD
-            6Xo+J5NL6Zxl5EROplu5bze4EMm7B6B6fgYc67YsAxrejOlAGRVa30d++p+GRvD/
-            NDvpEChjX7PJDW6rzDx1a1c91FCeq5xhYgfNvqLGj60SIlsBO84jGA6C3Bo/QZtU
-            NWzH5mFTKriT13/ysN9XS7j1rkBYa+P7aB4VSTeO48cW7nnLVDkJ4xJAwA/HpFcY
-            DH5AMeVAZ8bDIkxEn97UESgrCG6wZmQXrufKHZu5HNuwDDSpymX+Spei1A30yYiQ
-            5CS2ZMXfJSMsK9/PyfHOuz5EHUzTZlAIYxGThyMAaU6tiL+Jzhbl2icdqtz2cipr
-            zmIdW+L19gSPSHBHlC4b0bovLw+/2ga6k9185w4HhkSmwQvQsHzpsfJf1rM/JACS
-            QQ1/scAMWb2Kqu5EZa/q0l4BzAkcUnPEilBXzGs18hvg60OrF6xF3K6MWssz/76q
-            Zhe/vvN1xI02tqHrL4UINjGkrlNfsvY9hcLSa57DVN40DbNUbfK50lt56FvrQ4xU
-            5R0pCzDTsWaMxFbRXNV4
-            =QuF7
+            hQGMA71EESEn7N2iAQv/bBxWkfBD2TZ6PYlOyKdxPT70bocuG//a8c1fyExxzOQE
+            Iq8+LSAIc23+wrrv7tIYZrtkDyyQd+//tHFLFuqukBX04zvp+rWZE+iWsimFZUqn
+            oPUwhFLmXJyd/nM3XN+doNH8VhBTJb0aPKGEA3oBcJW0GNnp4OLiPcgffZn/8zlL
+            r8tEsiEwtoVF6qoepPgoLssu6NE5pjPnWbUiRZRQS2Y0rjejhj13mQMyYdNEMXY9
+            h7R6ZW+GtirK6WDcMmcWeLbplCduc/8lbIW62ag68+SjuTELa6F1FusieJIOx0Ud
+            f+gbkMU2W3PPFN5GOxp7mNrudbdWriZ7S3azPpQGXIbGlQXx4ipneSR2koT9o/Y8
+            U3dFXLEZryCVfb/3oiVVn0dHPEtqVC2EUI2PIx7IncLffmygaKS/oqfHCLoJZxDy
+            /Kx9r+dXhj+MPgjU5GRIPF2Li1NbAv48QxyhObp8V+UX904w+4lr4hn2+CC+5SER
+            B3CZ/uYCt2G4bi2S01Q00lwBzCP4CqmRYTNkFPYjwtJhPNmg8QxOQMZ7ROcpcFx3
+            KsAAbwmopBpsUXAfduw+I9jbSA8E8MZ/zaRpI3e7hKLKi4nlkxTXKbpT8nuS0HXq
+            /97etHlMbxNxMSnGuQ==
+            =4SIa
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
