fix(paperless): some updates to env vars

--- a/cluster/apps/default/paperless/secrets.enc.yaml
+++ b/cluster/apps/default/paperless/secrets.enc.yaml
@@ -4,35 +4,34 @@ metadata:
     name: paperless-secrets
     namespace: default
 stringData:
-    PAPERLESS_ADMIN_USER: ENC[AES256_GCM,data:CsMMqeU+,iv:FP9WNUkOnrTRtRG/EQPv3jj1j1arkDwkR13FPo9ywE0=,tag:PPnfyzzAfuyIHn8YZMFWcA==,type:str]
-    PAPERLESS_ADMIN_PASSWORD: ENC[AES256_GCM,data:pIYdYiQpENKqgvsmgGbdzNimwPkXCrkykAr3Yg+HvkxzU4ahTyPtKA==,iv:YsWnAzPb5eE2fxMj+mKl4tU2HPcoH84FP6+oLG+bdZk=,tag:F8Iq8stpkmKmVjdo6i3vKA==,type:str]
-    PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:gzg38CIo2xyx1aT7xq1nqWDHY2QLg0rKRQ2cEvkUlTfcKPk3Ry6cIA==,iv:qh68jl6Vj8jx/JW7y1eGqd6WFiT8HbEvP5PmkXE18zQ=,tag:JwwDP0CMn1G11YGLAKp/aA==,type:str]
-    PAPERLESS_AUTO_LOGIN_USERNAME: ENC[AES256_GCM,data:KTykXNPs,iv:+Wu1DKE1YGnSK2DQden1VDLbRTB1lAQfa+q3U+buYXY=,tag:DnGJTVWScEg3f60LK7QmIQ==,type:str]
+    PAPERLESS_ADMIN_USER: ENC[AES256_GCM,data:3Av+5vpo,iv:Qi7gzRj0KzUMynusDMezvfl/HNUPhpJfv6eFldax/Fo=,tag:DbqqiZsrn1Yqp76urBKXgw==,type:str]
+    PAPERLESS_ADMIN_PASSWORD: ENC[AES256_GCM,data:XIlqrKPHVzLQYTHgzG8+XJYapTAyE1e0hJ0jBTHHlN2R434/J9leew==,iv:BxvPpxKfU0oQsfPpqlUa6A9f+5ZtshAv3Ye/ao+sCTE=,tag:yzgS0yrgGRV4s1NssAQBVw==,type:str]
+    PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:TFVmyU5uf5dsyiT7GFxnU8zU+oJ5g9aTfPzDpinVbSCgIEKn9IY01g==,iv:zh+9TDlQRCfwZsmpLLBDZrLy0gnt7z4/HaEgIUpz4pE=,tag:m/0mcsqEBEyd6Hsxj/4o6g==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-09-28T19:27:33Z"
-    mac: ENC[AES256_GCM,data:lbiHgh2c2PMVbhfNpazJaTXqbzUo1iPRofrnoM7JYeWBZLpgVDqLJ/vyX/os9B87Ah9ZkEiZcQ7tUQKXcUZIQ7oPSQgimHrYAjobguYbsMnpuI8TttS58HJ7CGlL91f2obKDgpbUD86SyDMJFCbfuXblAHlo5VMCiHui9KLLtVg=,iv:s2f8jxn4/BApnw/zTBN6ElVOdAWr5nZeA6RiZ2MqhOU=,tag:aJvMX4JjtRjpKDshrxmHnw==,type:str]
+    lastmodified: "2022-09-28T20:18:06Z"
+    mac: ENC[AES256_GCM,data:EY5VZpkKIHSwb/goyBFXjc/cir45an63ojh5lJWMwHRR8n9hlr9f6pntUbvirtZeDjW2WHvtgukmC+bpRBYdHvXfeLsE+wx/p9I64PdAdTisFPOSqrtA+GJNd/RHDd3Dd77IYRb88AXjlLqilssjnhVUG/sl90gUZ0NEex+gzBI=,iv:xvunCnJkq8DSndeMYPfDiK0DxHhgdEn+33EI1I7y5n0=,tag:zDoBpmfWZ1g2Nd2HP0eyig==,type:str]
     pgp:
-        - created_at: "2022-09-28T19:27:32Z"
+        - created_at: "2022-09-28T20:18:05Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/bBxWkfBD2TZ6PYlOyKdxPT70bocuG//a8c1fyExxzOQE
-            Iq8+LSAIc23+wrrv7tIYZrtkDyyQd+//tHFLFuqukBX04zvp+rWZE+iWsimFZUqn
-            oPUwhFLmXJyd/nM3XN+doNH8VhBTJb0aPKGEA3oBcJW0GNnp4OLiPcgffZn/8zlL
-            r8tEsiEwtoVF6qoepPgoLssu6NE5pjPnWbUiRZRQS2Y0rjejhj13mQMyYdNEMXY9
-            h7R6ZW+GtirK6WDcMmcWeLbplCduc/8lbIW62ag68+SjuTELa6F1FusieJIOx0Ud
-            f+gbkMU2W3PPFN5GOxp7mNrudbdWriZ7S3azPpQGXIbGlQXx4ipneSR2koT9o/Y8
-            U3dFXLEZryCVfb/3oiVVn0dHPEtqVC2EUI2PIx7IncLffmygaKS/oqfHCLoJZxDy
-            /Kx9r+dXhj+MPgjU5GRIPF2Li1NbAv48QxyhObp8V+UX904w+4lr4hn2+CC+5SER
-            B3CZ/uYCt2G4bi2S01Q00lwBzCP4CqmRYTNkFPYjwtJhPNmg8QxOQMZ7ROcpcFx3
-            KsAAbwmopBpsUXAfduw+I9jbSA8E8MZ/zaRpI3e7hKLKi4nlkxTXKbpT8nuS0HXq
-            /97etHlMbxNxMSnGuQ==
-            =4SIa
+            hQGMA71EESEn7N2iAQv+M4mN2tzMNrYnfEqL21hrgq1W9EPun//zMiZCc6iPVvRO
+            dl5OVCB9Ghe5SbPoLxvcXkZfxIYrVarCqzUa46dBaqdjk9OtGHec+mFAwbprNLB1
+            7DbCfA8eqFJBIaHKmSr7tLN1eyi3drxgU0L0+FkFX8yznrZIoUb6EVXLfP3oI113
+            U4p2HxTMg91zIdw4n2ve4nFqzOM+qBUM6h0yCqgIOR/2AIOGnJWoTkxxd5GKjSWQ
+            tx7wgex14NFza1b8JgFS68xjlI0AxjjN3sAVeDDytIsj8FwXkHL80zt1HcYLK2fX
+            Yrs3ydM2ZdRyyzMmKcJY+4zuNObR0gPMoA0WwcWnmaxmYnaLY6DriGCummBeRbuF
+            uPFRXZ1pd0EWF6PQ7v0uzvGB2UVAYiDGgwmGnJ+zOtzXYIxjdtH4VMG5myBDjCQN
+            Q32L6yBhjloxNQxYuColeURjV4h84R0O118Q4Gd9gy8FkdRrggfEIcQvA9IwvVKa
+            uSFxp1ld2yO/1xQIwl1Y0l4BVxqTLhfBexj5Y6H3z+OA+4GbWEH4dAjZ262Za91o
+            RCpYjbD/voSUFUVt3IM7YTzttnH6GnZyGWYP6AmIcNhhN7+F8W6NEVKqQP5wNH2b
+            ua/8KjXpUj5ZHvvtY/P5
+            =8NJ6
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
