--- a/cluster/apps/default/paperless/paperless-helm-release.yaml
+++ b/cluster/apps/default/paperless/paperless-helm-release.yaml
@@ -27,7 +27,7 @@ spec:
       PAPERLESS_CONSUMER_RECURSIVE: "true"
       PAPERLESS_CONSUMER_SUBDIRS_AS_TAGS: "true"
       PAPERLESS_ENABLE_HTTP_REMOTE_USER: "false"
-      PAPERLESS_OCR_LANGUAGE: ara+eng
+      PAPERLESS_OCR_LANGUAGE: eng+ara
       PAPERLESS_OCR_LANGUAGES: eng ara
       PAPERLESS_PORT: 8000
       PAPERLESS_REDIS: redis://paperless-redis.default.svc.cluster.local:6379
