--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -120,7 +120,7 @@ spec:
           # Should be the same as the shadowsocks bridge server
           - name: FIREWALL_OUTBOUND_SUBNETS
             value: "185.65.134.66/32"
-          - name: PROTOCOL
+          - name: OPENVPN_PROTOCOL
             value: "tcp"
           - name: OPENVPN_IPV6
             value: "on"
