--- a/cluster/apps/default/prowlarr/prowlarr-helm-release.yaml
+++ b/cluster/apps/default/prowlarr/prowlarr-helm-release.yaml
@@ -17,8 +17,8 @@ spec:
       interval: 5m
   values:
     image:
-      repository: ghcr.io/k8s-at-home/prowlarr
-      tag: v0.4.0.1802
+      repository: ghcr.io/onedr0p/prowlarr-develop
+      tag: 0.4.9.2083
     env:
       TZ: "Africa/Cairo"
     ingress:
