fix(flood): fix wrong qbittorrent url in flood

--- a/cluster/apps/default/flood/flood-helm-release.yaml
+++ b/cluster/apps/default/flood/flood-helm-release.yaml
@@ -23,7 +23,7 @@ spec:
       - name: FLOOD_OPTION_AUTH
         value: "none"
       - name: FLOOD_OPTION_QBURL
-        value: "http://qbittorrent:8080"
+        value: "http://qbittorrent.default.svc.cluster.local:8080"
       - name: FLOOD_OPTION_RUNDIR
         value: "/config"
       - name: FLOOD_OPTION_QBUSER
