chore(qbittorrent): change config mount path for new qbittorrent docker image

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -49,6 +49,7 @@ spec:
       config:
         enabled: true
         existingClaim: qb-config-pvc
+        mountPath: /data/config
       downloads:
         enabled: true
         existingClaim: nfs-media-downloads-pvc
