chore(qbittorrent): attempt at making 4.5.0beta1 qbittorrent to work

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -50,6 +50,12 @@ spec:
         enabled: true
         existingClaim: qb-config-pvc
         mountPath: /data/config
+        subPath: /qBittorrent
+      qbittorrent-data:
+        enabled: true
+        existingClaim: qb-config-pvc
+        mountPath: /data/data
+        subPath: /qBittorrent
       downloads:
         enabled: true
         existingClaim: nfs-media-downloads-pvc
