--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -50,12 +50,12 @@ spec:
         enabled: true
         existingClaim: qb-config-pvc
         mountPath: /data/config
-        subPath: /qBittorrent
+        subPath: qBittorrent
       qbittorrent-data:
         enabled: true
         existingClaim: qb-config-pvc
         mountPath: /data/data
-        subPath: /qBittorrent
+        subPath: qBittorrent
       downloads:
         enabled: true
         existingClaim: nfs-media-downloads-pvc
