chore(qbittorrent): replace qbittorrent pvc

--- a/cluster/apps/default/qbittorent/pvc.yaml
+++ b/cluster/apps/default/qbittorent/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: qb-config-pvc
+  name: qb-config-pvc2
   namespace: default
 spec:
   accessModes:
