--- a/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
@@ -20,6 +20,8 @@ spec:
     # https://github.com/longhorn/longhorn/issues/1861#issuecomment-716459507
     csi:
       kubeletRootDir: /var/lib/kubelet
+    # Needed when using longhorn v1.4.0 to work with kubernetes <=1.24
+    enablePSP: true
     persistence:
       defaultClassReplicaCount: 2
     defaultSettings:
