fix(oauth2-proxy): add /ready to api-routes

--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -52,6 +52,7 @@ spec:
 
     # TODO: Check if --reverse-proxy flag is useful or not
     extraArgs:
+      api-route: "^/ready"
       provider: google
       provider-display-name: "an authenticated email"
       skip-provider-button: "false"
