fix(yourls): fix wrongly encrypted secrets

--- a/cluster/apps/default/yourls/secrets.enc.yaml
+++ b/cluster/apps/default/yourls/secrets.enc.yaml
@@ -4,5 +4,34 @@ metadata:
     name: yourls-secrets
     namespace: default
 stringData:
-    username: ENC[AES256_GCM,data:e8eWTCBvk+cQzhcp6wvgFA==,iv:PuMT0vFeoRBH0nrNDVZv/yiAXKuG5MgvWL0mUGm0rXA=,tag:FUySenj7OqdD3qIaA3X8rw==,type:str]
-    password: ENC[AES256_GCM,data:Dw==,iv:IVg0Ycni6ms15V/BY0YXb4NX4TeUf69r6oOXUeD2mNc=,tag:5r6Nzqc0YTh0kmhUeKY+BA==,type:str]
+    username: ENC[AES256_GCM,data:PdgrwpKK,iv:lP39cHNBIU2tKw1qeLUxTrexJW2x8yOWVYtWSTIEsCQ=,tag:wkhLXIhLJCW+GPb/PEW4uw==,type:str]
+    password: ENC[AES256_GCM,data:L/W9WiGJhc7Q5C/+hMYlw4N0MtFYyNYGcqEAUHn7Ii1bs/cc6+MNaw==,iv:MbfejL5DyQXfFE2+jzCJGJkUf8g2G8cED8RHdC5ue/M=,tag:bofHG+zZCFJsUHdMfWVyxQ==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age: []
+    lastmodified: "2023-01-18T20:16:29Z"
+    mac: ENC[AES256_GCM,data:LTMPsZg2vUQ1/NXGKQJ0ZLospElOMnvq7l6PsZpAg1yOMQtZNXjjMI0QsDQ0M1x7l+2s8qw9PuuptNXVOJIZo4emG7o+4/dgEasBHN0UTb4mMR5UOEDd+LhrrlW0q7HoDL19pht7TiC//1gwp8hISG5+kCZIlzzgJUC6eaU0kGE=,iv:LpHkhvKE8ul3rnb/v/3k/5bWCOE0a0Oq86KZETig8mw=,tag:EczNWjP6loyqruBu9YZMTg==,type:str]
+    pgp:
+        - created_at: "2023-01-18T20:16:28Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+
+            hQGMA71EESEn7N2iAQv/YEFdKvi6D/3x5roqWQkRbAA6aZQvzJ3dgxm5D45NyO7X
+            qTv6f1RZQv6ueIGBcJS8aD6mGJqJzv8hxBwE1c9rvMqx299t4RZBA4iSwlAeubW1
+            I8ZyvzSaDbmZ3e15CtYCSEEZA6CMoK9cWcCyEgSjUl9a8qLnKL1Ci1YbqWlyVIkW
+            mmiJRt4JehFAsypvJeSKNPluJWH5yabK1EV/TfxC7LzXhqSoqdz2DWNbt+4/UYcg
+            dR9kF4WEERVXP/lesu4qUnMz8yqhb0K7iEQCNS/EXApZo+dHQeglWquQaiHC3OcJ
+            uWO1Dw1a0AxICzFjoewitj6i5jtlgRWJkOGg+c9d/9bAjjBYd6EXRkjCMfrO4F1b
+            3eBOsxwNvzaa1MfnSKCHu/EI5pd3J3jf2bUkrQ6hCmhZr53kZQrPViXdhND0VTqP
+            1PUQ8I+saKwIWs7wTV39A57YuPoJYBg57YB4PyGcAfZdc5T/kubtB6/9eXBfWtLP
+            p6ZoN2PG6zjLT7toGLex0l4B8YModsr5sFiqeo5BO6g7nDN7SZTHrsswhPBt5qfw
+            Y8IpJk1xh7SOlIMh5CkGSjVObwZ5vIETpspNXlB5XH88YDiCE3lJ9ZKK1o/wU0wO
+            6Bsdje6RiDHyDBIKQZ5U
+            =gcZz
+            -----END PGP MESSAGE-----
+          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.3
