--- a/cluster/apps/default/yourls/yourls-helm-release.yaml
+++ b/cluster/apps/default/yourls/yourls-helm-release.yaml
@@ -17,6 +17,7 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+
     image:
       registry: ghcr.io
       repository: yourls/yourls
@@ -29,8 +30,6 @@ spec:
       scheme: http
       existingSecret: yourls-secrets
 
-
-
     ingress:
       enabled: true
       ingressClassName: "nginx"
@@ -40,6 +39,10 @@ spec:
         nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
         nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
       tls: true
+
+    service:
+      type: ClusterIP
+      port: 80
 
     persistence:
       enabled: true
