fix(yourls): created secrets for mariadb

--- a/cluster/apps/default/yourls/yourls-helm-release.yaml
+++ b/cluster/apps/default/yourls/yourls-helm-release.yaml
@@ -52,6 +52,10 @@ spec:
       size: 10Gi
 
     mariadb:
+      auth:
+        database: yourls
+        username: yourls
+        existingSecret: yourls-mariadb-secrets
       primary:
         persistence:
           enabled: true
