fix(yourls): change name of mariab db secrets

--- a/cluster/apps/default/yourls/mariadb-secrets.enc.yaml
+++ b/cluster/apps/default/yourls/mariadb-secrets.enc.yaml
@@ -1,37 +1,37 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: yourls-mariadb-secrets
+    name: yourls-mariadb
     namespace: default
 stringData:
-    mariadb-root-password: ENC[AES256_GCM,data:AeJ8pjGxf3j6wR1s7fdfDq0iXPq8yLNktPmO9nxZkFpk9vZ5mrjMDQ==,iv:QgnDeoLYtztsVH9DkM/cK5sRTITkQcTagbZ2kGoW6Hw=,tag:xks2eJ6tey2guY8yrlQcLw==,type:str]
-    mariadb-replication-password: ENC[AES256_GCM,data:wzgPUJss6fCS6Zz4V7ANMxspMRXb2Oc7EaruyiBIyrRbPF+FW2em7A==,iv:M3XPJCWIkib+6hWeoC0Z4nKX95E0eSapnPmrqv4FPfk=,tag:sJyTkjTyoflFUbZHRdSeEw==,type:str]
-    mariadb-password: ENC[AES256_GCM,data:EHMCWjogTMfqmZLgpU4Bhr+V+Uvv3FuDG+pL3y4wHzxCAQEcX+VicA==,iv:oyetMkjI3JXItncpit/7rfYA9Tqfj8qjC7EE/FVhaPM=,tag:IyH8raVy19YfStOY4YJfCg==,type:str]
+    mariadb-root-password: ENC[AES256_GCM,data:bhxrnwlDQG+xF4anQx/LIMusQE5I/dyJvx+E9vMFxSYrbXRKz+lqEw==,iv:qluD3+UPkoImp3Cx5TZTcDS3yaWDvng8mQoFxqCZF+Y=,tag:vefpI3EDzo0O+Luq4iAS2Q==,type:str]
+    mariadb-replication-password: ENC[AES256_GCM,data:6vTls99qp47m/Lfsc/tlq07G51Zf31WSwF2Xl3VyXWS8Jro8PFBWfQ==,iv:tlKriA08jyUXtZQ3VK1c6iK9X6I45Iush4CAs0LXZ+8=,tag:Vn9BADiuZc/xP6cPINnS/A==,type:str]
+    mariadb-password: ENC[AES256_GCM,data:7xoYFiy3COgxak6ew3UTryluB3tuW9v9Dj4fCtnWKojGDKjUBeGbug==,iv:e99PX2QlJoupMLhDIJ+T/Qf30/UQftEb92ufONGO5Og=,tag:duFRgMZeTGcRXBfTRLqAVQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-01-18T20:34:19Z"
-    mac: ENC[AES256_GCM,data:tw5ALDUx6NtEryvNLg0aZIkWJL8VM8AqS3y6ielWCWljCvQ3gdKkQdrgX354Z6DSj2fT3ik8J71x4IhG9Vq2HoQUE7bEdJ6wQ0vbiGrrvI/O3A/BfWWGzBuABOrPp6Ks21UY39xLeZjOu1cHJOuFnnVQwcAQR8X6jPvPqer7bEc=,iv:0iqgIrlqTLS+3xfNHH58PtLSyaLAPDv+yiWtx8TaJv0=,tag:Ywid5xlaEnkaLwfmU/q3LA==,type:str]
+    lastmodified: "2023-01-18T20:38:48Z"
+    mac: ENC[AES256_GCM,data:BXwPV3wbHInUjcOx46wikLIXwYve3wQDVoQriFTrpR+bDizVBgxjA00XKcLnLQlJ/z8qlEhaJnXp/LKhxgOdXqRJECenctOqgc3zJ0uDbaN3tyDu92bmC9edzRvwfhKzp5Wsc25pqJqFXDEggkl5fIgRK+o13YIwPW2Rf2RY7r4=,iv:y862ygm8Vis+kpHmPdL20TdewHFmyj6VNPURD2o9JIA=,tag:D6FcdDpceksL4MGqh6pK2Q==,type:str]
     pgp:
-        - created_at: "2023-01-18T20:34:18Z"
+        - created_at: "2023-01-18T20:38:47Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQwAnqBfbFxfMPdbj4XCY7gHB29QrKTCCgJOhmke7jjGXYOB
-            Glt6q1X71ayyBdwBmLsP4VIMjWmRYOdKAsf81cdepRKN7RoXer97H44DRgXl59Ap
-            c9Dm0rRrJDb0unzoiyWT8TtN5gVQjz7VVcLDmertj3rwhFCfi/Yq4lxDR+gBFVnj
-            2JWx7HxA2xOh//MiN+T3dyfjDARtYZzpFmmymL9L28hg6i1j4Lf4QysLkE36lX9/
-            1XmCbTKI9Vb48ENm4c+byQRzGYizH9qOGmXCSFKZNLhFOi2gUqF4NzY+TMXyeoZj
-            KNUAnl2sv3SZ+VvkuAQJpfXk9Ne7AhDa914bmCLyInQoyASYnAaC0mR4lVFNyBsD
-            piMwhcmIu3spzcnW2/rnftN9e4RNGJ1ZZSoeMRBtD7R0Jl6+xbe+LEkkc4m9b1bQ
-            9dHZB3np55BDIaqziQYruzk+qNluvSv5WP4gY+oHAN0AJepsMzt+LsfaBNHyJcxs
-            FUbp1NDSmdcs9TbqMNmw0l4BjOf5qy6LK9uNemKs/PzvXOuq/+RUBXRSRdbqShxh
-            TRKsbDC27Miop2vxdN6lkK1wUXmaWKPHg7vPsNpgr7qutbKeAOKx9kB+1VoyqEhN
-            5sS0aedZNOWjnkbPEbmI
-            =uskT
+            hQGMA71EESEn7N2iAQwAi5wtPrYonww2Cb0NsGLikLsN+DOqmTeNcObpXGmvTB+G
+            igdTM6VMqOh7W35xic6YpJkwu573tQcV/2YPvY2CLO1buan1xMkcStPkl+kDtq6H
+            0RZop2mO2WuQ1kpCRMwQLNMTv1i983zTc4FPDAtgovydd5gg/SpGzYV9eFs8ThdP
+            EJErAsHxYb2sHA/qxC+e42qFKxKBZocJQpvRcJ5ht+fAi6jLBj+GMBJoGehzz00u
+            OvPLp0fkIWokvQpTummkoQXVfOwqcDyZvX4a3bdt6xwKOm01ae/YYR6L/YZXmnFF
+            /1uVuF54xxDaw/mRBTLwClw1G74Qq4hq0TIqorB+w1F589JfgGAIsSCyaoWR/uZT
+            SnK3LoXm+NLEWgWvb/rwXelLhv6789y3kcoS8esj4MPfRpMxbwVp2WBaUmJKn8hY
+            HC/qrS9CnRVVuoH3rUQ62mq5YMwJcfZp3+1E2q6USTETute7L2zE4P/EFr56DnmT
+            yUANKx/EXAeIjBQ2dh7w0l4B5BISPNFcUIWoONydX1F1X50apE5a3E+Ft726Dw+2
+            0SGatvYuNoClYufnxRdqL5AM0tcWBsscFdcyOHLRbZIVBK/w+JF1GQ+a5xwzGspa
+            IIdSNlj00hcHlmYRLBjL
+            =/yzh
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
