fix(yourls): change scheme to https

--- a/cluster/apps/default/yourls/yourls-helm-release.yaml
+++ b/cluster/apps/default/yourls/yourls-helm-release.yaml
@@ -27,7 +27,7 @@ spec:
 
     yourls:
       domain: "${SECRET_DOMAIN}"
-      scheme: http
+      scheme: https
       existingSecret: yourls-secrets
 
     ingress:
