fix(yourls): fix wrong domain being used and revert back scheme

--- a/cluster/apps/default/yourls/yourls-helm-release.yaml
+++ b/cluster/apps/default/yourls/yourls-helm-release.yaml
@@ -26,8 +26,8 @@ spec:
     replicaCount: 1
 
     yourls:
-      domain: "${SECRET_DOMAIN}"
-      scheme: https
+      domain: "yourls.${SECRET_DOMAIN}"
+      scheme: http
       existingSecret: yourls-secrets
 
     ingress:
